<resources>
    <string name="app_name">Gasto de Viagem (RelativeLayout)</string>
    <string name="distance">Distância</string>
    <string name="total_kilometers">Total de quilômetros</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por litro</string>
    <string name="your_total_spend">Seu gasto total será de</string>
    <string name="default_spend_value">R$ 0,00</string>
    <string name="calculate">Calcular</string>
</resources>