<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/distance"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_total_kilometers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_distance"
        android:layout_centerHorizontal="true"
        android:text="@string/total_kilometers" />

    <EditText
        android:id="@+id/edit_price_per_liter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_total_kilometers"
        android:autofillHints=""
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_price_per_liter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_price_per_liter"
        android:layout_centerHorizontal="true"
        android:text="@string/price_per_liter" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_price_per_liter"
        android:autofillHints=""
        android:hint="@string/autonomy"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_autonomy"
        android:layout_centerHorizontal="true"
        android:text="@string/kms_per_liter" />

    <TextView
        android:id="@+id/text_your_total_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_autonomy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/your_total_spend"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_total_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_your_total_spend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/default_spend_value"
        android:textColor="@color/cyan_blue_medium"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_total_spend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_cyan"
        android:paddingHorizontal="64dp"
        android:paddingVertical="16dp"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>